ensure neat wrap and centering of dropdown titles

--- a/src/components/Dropdown/Dropdown.css
+++ b/src/components/Dropdown/Dropdown.css
@@ -7,7 +7,6 @@
     position: relative;
     width: 100%;
     display: flex;
-    flex-direction: row;
     justify-content: center;
     background-color: #24347b;
     cursor: pointer;
@@ -32,6 +31,10 @@
 
 .dropdown__header__caret img {
     height: 50%;
+}
+
+.dropdown__header__title {
+    text-align: center;
 }
 
 .dropdown__header__title h3 {
@@ -84,8 +87,9 @@
 @media only screen and (max-width: 675px) {
     .dropdown__header__title h3 {
         font-size: 1rem;
-        justify-self: end;
-        margin: 1rem 1rem 1rem 1rem;
+        margin-left: 3rem;
+        margin-right: 3rem;
+        text-wrap: pretty;
     }
     .events .dropdown__header__title h3 {
         margin: 1rem 1rem 1rem 4rem;
